// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`equals check 1`] = `
[
  "<A> receive: name=TOM,",
  "<A> receive: name=JANE,",
]
`;

exports[`life cycle > with initial values 1`] = `
[
  "<A> onInit name=Jam, color=red,",
  "<A> onBeforeUpdate name=Jam, color=red,",
  "<A> onUpdate name=Jam, color=red,",
  "  <B> onInit text=Jam-red,",
  "  <B> onBeforeUpdate text=Jam-red,",
  "  <B> onUpdate text=Jam-red,",
  "  <B> onAfterUpdate text=Jam-red,",
  "<A> onAfterUpdate name=Jam, color=red,",
]
`;

exports[`life cycle 1`] = `
[
  "<A> onInit name=Jam, color=red,",
  "<A> onBeforeUpdate name=Jam, color=red,",
  "<A> onUpdate name=Jam, color=red,",
  "  <B> onInit text=Jam-red,",
  "  <B> onBeforeUpdate text=Jam-red,",
  "  <B> onUpdate text=Jam-red,",
  "  <B> onAfterUpdate text=Jam-red,",
  "<A> onAfterUpdate name=Jam, color=red,",
  "<A> onBeforeUpdate name=Tom, color=red,",
  "<A> onUpdate name=Tom, color=red,",
  "  <B> onBeforeUpdate text=Tom-red,",
  "  <B> onUpdate text=Tom-red,",
  "  <B> onAfterUpdate text=Tom-red,",
  "<A> onAfterUpdate name=Tom, color=red,",
  "<A> onBeforeUpdate name=Jane, color=red,",
  "<A> onUpdate name=Jane, color=red,",
  "  <B> onBeforeUpdate text=Jane-red,",
  "  <B> onUpdate text=Jane-red,",
  "  <B> onAfterUpdate text=Jane-red,",
  "<A> onAfterUpdate name=Jane, color=red,",
  "  <B> onDestroy text=Jane-red,",
  "<A> onDestroy name=Jane, color=red,",
]
`;

exports[`life cycle: with initial values 1`] = `
[
  "<A> onInit name=Jam, color=red,",
  "<A> onBeforeUpdate name=Jam, color=red,",
  "<A> onUpdate name=Jam, color=red,",
  "  <B> onInit text=Jam-red,",
  "  <B> onBeforeUpdate text=Jam-red,",
  "  <B> onUpdate text=Jam-red,",
  "  <B> onAfterUpdate text=Jam-red,",
  "<A> onAfterUpdate name=Jam, color=red,",
]
`;
